# DDBot

./: .gitignore  README.md  pyproject.toml
daily_digest_bot/: __init__.py  delivery.py  digest.py  ingestion.py  llm.py  main.py  models.py  personalization.py  pipeline.py  ranking.py  slack_api.py  store.py  thread_processing.py
daily_digest_bot/app/: __init__.py  bootstrap.py  config.py
daily_digest_bot/db/: __init__.py  connection.py  schema.py
daily_digest_bot/db/repositories/: __init__.py  channels_repo.py  digest_runs_repo.py  events_repo.py  feedback_repo.py  messages_repo.py  users_repo.py
docs/: architecture.md  code-reference.md  pipeline-function-walkthrough.md
scripts/: seed_slack_test_data.py
tests/: test_delivery_blocks.py  test_digest_links.py  test_ingestion_subtypes.py  test_pipeline.py  test_ranking.py  test_thread_links.py
